2006-02-04  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm:
	signal mask set not to block any signals in new threads.
	
2006-02-03  Nobuo Yamashita  <nobsun@sampou.org>

	* merge from main-trunc
	
2006-02-01  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added kahua-header-set!.
	Added "x-kahua-headers" to kahua context.

	* src/kahua/sandbox.scm:
	Changed disable-bindings syntax to use `define' instead of `define-macro'.

2006-02-01  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr:
	Use global variable *worker-types* instead of parameter worker-types.
	
2006-02-01  Nobuo Yamashita  <nobsun@sampou.org>

	* merge main-trunc
	
2006-01-28  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Added dataval-type method to <kahua-db-dbi>.
	dataval-type return type of dataval field.

2006-01-27  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/persistence.scm:
	modify with-db macro.
	We can use with-db macro whiout knowledge for
	current-db's path name.

2006-01-24  Nobuo Yamashita  <nobsun@sampou.org>

	* merge main-trunc

2006-01-22  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed id-counter writer to use sys-mkstemp.
	(Patch from Tatsuya BIZENN)

	* src/kahua-server.scm:
	Changed to block SIGINT, SIGHUP SIGTERM signal on accept-handler.
	(Patch from Tatsuya BIZENN)

2006-01-18  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm:
	make multi-threaded. 
	Attention several tests cannot return at the moment.
	
2006-01-18  SHIBATA Tomohisa  <shibata@kahua.org>

	* branch dev_spvr_mt_branch:
	
2006-01-14  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Added interp-json, <json-base>, x->json.

2006-01-10  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm, test/serialize.scm:
	Added keyword support.

2006-01-09  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm:
	Bug fixed.
	* test/serialize.scm, test/Makefile.in:
	Added test code.
